--- a/index.html
+++ b/index.html
@@ -11,28 +11,47 @@
   </head>
   
   <body>
+    <main>
     <div class="container">
-      <h4>唬爛產生器</h4>
-      <blockquote>
-        <p>繳交報告、湊字數、應付女朋友的好夥伴</p>
-      </blockquote>
-      <blockquote>
-        <div>
-          <div class="input-field" style="margin-top: 15px;">
-            <input id="topic" type="text">
-            <label for="topic">＊請輸入您的主題名稱</label>
+        <h4>唬爛產生器</h4>
+        <blockquote>
+          <p>繳交報告、湊字數、應付女朋友的好夥伴</p>
+        </blockquote>
+        <blockquote>
+          <div>
+            <div class="input-field" style="margin-top: 15px;">
+              <input id="topic" type="text">
+              <label for="topic">＊請輸入您的主題名稱</label>
+            </div>
+            <div class="input-field" style="margin-top: 15px;">
+              <input id="minlen" type="number">
+              <label for="minlen">＊請輸入字數要求(上限1000)</label>
+            </div>
+            <a class="waves-effect waves-light red darken-4 btn-small pulse" loading-text="產生中..."  id="btn-get-bullshit">產生</a>
           </div>
-          <div class="input-field" style="margin-top: 15px;">
-            <input id="minlen" type="number">
-            <label for="minlen">＊請輸入字數要求(上限1000)</label>
-          </div>
-          <a class="waves-effect waves-light red darken-4 btn-small pulse" loading-text="產生中..."  id="btn-get-bullshit">產生</a>
+        </blockquote>
+        <div style="margin: 50px; font-weight: 600;">
+          <p id="content"></p>
         </div>
-      </blockquote>
-      <div style="margin: 50px; font-weight: 600;">
-        <p id="content"></p>
-      </div>
     </div>
+    </main>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Developer</h5>
+            <p class="grey-text text-lighten-4">徐子修 Bill Hsu</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Contact Link</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/profile.php?id=100000395222019">Facebook</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://t.me/bill_hsu">Telegram</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
   
   <script type="text/javascript" src="js/materialize.min.js"></script> 
