--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/style.css" />
   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -38,11 +39,11 @@
     <footer class="page-footer">
       <div class="container">
         <div class="row">
-          <div class="col l6 s12">
+          <div class="col l6 s6">
             <h5 class="white-text">Developer</h5>
             <p class="grey-text text-lighten-4">徐子修 Bill Hsu</p>
           </div>
-          <div class="col l4 offset-l2 s12">
+          <div class="col l4 offset-l2 s6">
             <h5 class="white-text">Contact Link</h5>
             <ul>
               <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/profile.php?id=100000395222019">Facebook</a></li>
