--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/style.css" />
+    <link type="text/css" rel="stylesheet" href="css/materialize.social.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,7 +19,7 @@
     <div class="container">
         <h4>唬爛產生器</h4>
         <blockquote>
-          <p>繳交報告、湊字數、應付女朋友的好夥伴</p>
+          <p>繳交報告、湊字數、應付男/女朋友的好夥伴</p>
         </blockquote>
         <blockquote>
           <div>
@@ -36,19 +39,21 @@
         </div>
     </div>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer" style="padding-top: 10px;">
       <div class="container">
-        <div class="row">
+        <div class="row" style="margin-bottom: 10px;">
           <div class="col l6 s6">
-            <h5 class="white-text">Developer</h5>
+            <h5 class="white-text" style="font-family: 'Open Sans', sans-serif;">Developer</h5>
             <p class="grey-text text-lighten-4">徐子修 Bill Hsu</p>
           </div>
           <div class="col l4 offset-l2 s6">
-            <h5 class="white-text">Contact Link</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/profile.php?id=100000395222019">Facebook</a></li>
-              <li><a class="grey-text text-lighten-3" href="https://t.me/bill_hsu">Telegram</a></li>
-            </ul>
+            <h5 class="white-text" style="font-family: 'Open Sans', sans-serif;">Contact</h5>
+                <a class="waves-effect waves-light btn-floating social facebook" href="https://www.facebook.com/profile.php?id=100000395222019">
+                  <i class="fa fa-facebook"></i>
+                </a>
+                <a class="waves-effect waves-light btn-floating social telegram" href="https://t.me/bill_hsu">
+                  <i class="fa fa-telegram"></i>
+                </a>
           </div>
         </div>
       </div>
