Add github link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           </div>
           <div class="col l4 offset-l2 s6">
             <h5 class="white-text" style="font-family: 'Open Sans', sans-serif;">Contact</h5>
+                <a class="waves-effect waves-light btn-floating social github" href="https://github.com/StillFantastic/bullshit">
+                  <i class="fa fa-github" aria-hidden="true"></i>
+                </a>
                 <a class="waves-effect waves-light btn-floating social facebook" href="https://www.facebook.com/profile.php?id=100000395222019">
                   <i class="fa fa-facebook"></i>
                 </a>
